# bpt

./: .editorconfig  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Makefile  README.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN_v2.md  docker-compose.dev.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/auth-service/: Dockerfile  __init__.py  pyproject.toml
apps/auth-service/application/: __init__.py
apps/auth-service/application/ports/: cognito_client.py  jwt_signer.py  session_repository.py  user_repository.py
apps/auth-service/application/use_cases/: create_cipher_session.py  forgot_password.py  login_user.py  logout_user.py  oauth_callback.py  refresh_token.py  register_user.py  svc_token.py
apps/auth-service/domain/: __init__.py  errors.py  responses.py
apps/auth-service/domain/entities/: provider_entities.py  session.py  user.py
apps/auth-service/domain/services/: auth_service.py  response_mapper.py  user_mapper.py  validation_service.py
apps/auth-service/domain/value_objects/: tokens.py
apps/auth-service/infrastructure/adapters/boto3/: cognito_client.py
apps/auth-service/infrastructure/adapters/crypto/: cipher_service_adapter.py  ecdh_kms.py  es256_signer.py  jwt_signer_adapter.py
apps/auth-service/infrastructure/adapters/mock/: cognito_dev_mock.py
apps/auth-service/infrastructure/adapters/redis/: session_repository.py
apps/auth-service/infrastructure/factories/: __init__.py  cognito_client_factory.py
apps/auth-service/presentation/: __init__.py  app.py
apps/auth-service/presentation/api/: auth_routes.py  jwks_routes.py  svc_token_routes.py
apps/auth-service/presentation/middleware/: __init__.py  errors.py
apps/auth-service/presentation/schema/: auth_schemas.py  svc_token_schemas.py
apps/auth-service/tests/unit/: test_es256_signer.py
apps/bff/: Dockerfile  __init__.py  pyproject.toml
apps/bff/application/ports/: userprofiles_port.py  usersettings_port.py
apps/bff/application/use_cases/: get_user.py  update_user_settings.py
apps/bff/domain/: responses.py
apps/bff/domain/entities/: user.py
apps/bff/infrastructure/adapters/: http_userprofiles_client.py  http_usersettings_client.py
apps/bff/presentation/: app.py
apps/bff/presentation/api/: user_routes.py
apps/bff/presentation/middleware/: auth_jwt.py  errors.py
apps/bff/presentation/schema/: user_schemas.py
apps/bff/tests/: __init__.py
apps/bff/tests/unit/: __init__.py  test_get_user_use_case.py  test_http_userprofiles_client.py  test_http_usersettings_client.py  test_update_user_settings_use_case.py
apps/events-service/: Dockerfile  __init__.py  pyproject.toml
apps/events-service/application/ports/: event_consumer.py  event_producer.py  event_store.py
apps/events-service/application/use_cases/: publish_event.py  replay_events.py
apps/events-service/domain/: errors.py
apps/events-service/domain/entities/: event.py
apps/events-service/domain/value_objects/: event_types.py
apps/events-service/infrastructure/adapters/: msk_event_producer.py
apps/events-service/infrastructure/adapters/kafka/: kafka_consumer.py  kafka_producer.py
apps/events-service/infrastructure/adapters/redis/: redis_event_store.py
apps/events-service/presentation/: app.py
apps/events-service/presentation/api/: event_routes.py
apps/events-service/presentation/middleware/: auth_jwt.py  errors.py
apps/events-service/presentation/schema/: event_schemas.py
apps/events-service/tests/: __init__.py
apps/events-service/tests/unit/: __init__.py  test_kafka_producer.py  test_publish_event_use_case.py  test_replay_events_use_case.py
apps/shared/python/shared_auth/: jwt_verify.py  principals.py  service_tokens.py
apps/shared/python/shared_config/: env.py
apps/shared/python/shared_http/: client.py
apps/shared/python/shared_logging/: setup.py
apps/shared/python/shared_telemetry/: otel.py
apps/userprofiles-service/: Dockerfile  __init__.py  pyproject.toml
apps/userprofiles-service/application/: __init__.py
apps/userprofiles-service/application/ports/: user_repository.py
apps/userprofiles-service/application/use_cases/: create_user.py  get_user.py  list_users.py  update_user.py
apps/userprofiles-service/db/functions/: users.sql
apps/userprofiles-service/db/init/: 000_roles_and_schema.sql
apps/userprofiles-service/db/procedures/: rebuild_indexes.sql
apps/userprofiles-service/db/tables/: users.sql  (+1 more)
apps/userprofiles-service/presentation/: __init__.py  app.py
apps/userprofiles-service/scripts/: run_pg_migrations.py
apps/usersettings-service/: Dockerfile  __init__.py  pyproject.toml
apps/usersettings-service/application/ports/: user_settings_repository.py
apps/usersettings-service/application/use_cases/: delete_user_setting.py  get_all_user_settings.py  get_user_setting.py  update_user_setting.py
apps/usersettings-service/db/dynamodb/migrations/: 20250909-0001_add_default_language.py
apps/usersettings-service/domain/: errors.py
apps/usersettings-service/domain/entities/: user_setting.py
apps/usersettings-service/infrastructure/adapters/: ddb_settings_repository.py
apps/usersettings-service/infrastructure/config/: settings.py
apps/usersettings-service/presentation/: app.py
apps/usersettings-service/presentation/api/: health_routes.py  settings_routes.py
apps/usersettings-service/presentation/middleware/: errors.py
apps/usersettings-service/presentation/schema/: user_settings_schemas.py
apps/usersettings-service/scripts/: run_dynamodb_migrations.py
apps/usersettings-service/tests/unit/: test_ddb_settings_repository.py
frontend/web/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
frontend/web/src/: App.css  App.tsx
infrastructure/kubernetes/base/: namespaces.yaml
infrastructure/kubernetes/istio/: destination-rules.yaml  gateway.yaml  security.yaml
infrastructure/kubernetes/monitoring/: fluent-bit.yaml  otel-collector.yaml
infrastructure/localstack/: 01-setup-cognito.sh
scripts/: check_sidecar_injection.sh  dev_bootstrap.sh  smoke_tests.sh
shared/python/: pyproject.toml
(+38 files in other folders)
